--- a/argoapp.yaml
+++ b/argoapp.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-wordpress
+  name: demo-argocd
 spec:
   destination:
     namespace: default
